# example-mcp-server

./: .env  .env.example  .gitignore  README.md  mcp.json  pyproject.toml  server.py  uipath.json
.uipath/: .auth.json  .error_log
